2005-07-06  James E. Wilson  <wilson@specifixinc.com>

	* ia64.c (ia64_reorg): Check optimize before ia64_flag_schedule_isns2.

2005-07-06  John David Anglin  <dave.anglin@nrc-crnc.gc.ca>

	* pa.c (legitimize_pic_address): Use gcc_assert instead of abort.
	(legitimize_tls_address): Use gcc_unreachable instead of abort.

2005-07-06  Kaz Kojima  <kkojima@gcc.gnu.org>

	* function.c (expand_function_end): Revert part of 2005-06-27
	patch.  Do sjlj_emit_function_exit_after after return_label.

2005-07-06  Kazu Hirata  <kazu@codesourcery.com>

	* doc/install.texi (--disable-libssp): New.

2005-07-06  Fariborz Jahanian <fjahanian@apple.com>

        * doc/invoke.texi: Update -fforce-mem documentation.
        * dojump.c (compare_from_rtx,do_compare_rtx_and_jump): Remove 
        code for -fforce-mem.
        * expmed.c: (store_bit_field,store_fixed_bit_field,
        extract_bit_field): Ditto.
        * expr.c: (convert_move): Ditto.
        * optabs.c: (expand_binop,expand_twoval_unop,expand_twoval_binop,
        expand_unop,emit_unop_insn,prepare_cmp_insn,emit_conditional_move,
        emit_conditional_add,expand_float,expand_fix): Ditto.
        * opts.c: (decode_options): Remove setting of flag_force_mem flag.
        (common_handle_option): Issue warning when -fforce-mem specified.

2005-07-06  Paul Brook  <paul@codesourcery.com>

	* aclocal.m4: Work around a bug in AC_PATH_PROGS when its last
	argument is empty.
	* configure: Regenerate.

2005-07-06  J"orn Rennecke <joern.rennecke@st.com>

	* sh.c (final_prescan_insn): Undo bogus change from 2005-05-09.

2005-07-06  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/22319
	Fix PR tree-optimization/22140
	Fix PR tree-optimization/22310

	* tree-ssa-structalias.c (do_structure_copy): Give up earlier on
	variable sized types.
	Use correct type for intermediate structure on *a = *b structure
	copies.
		
2005-07-06  Jakub Jelinek  <jakub@redhat.com>
